# qrcode-other-pattern

./: .gitignore  README.rst  pyproject.toml  segno_plugin.py  test-requirements.txt
.github/workflows/: python-app.yml
tests/: test_to_other_pattern.py
